# c_event_system

./: CMakeLists.txt  README.md  events.def
examples/: CMakeLists.txt  main.c
include/: event.h  event_system.h
src/: event_system.c
